// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography> should contain the Title and Paragraph components: <Typography.Paragraph> should render a p tag with the text Glints Aries 1`] = `
<p
  className="aries-typography-paragraph sc-bwzfXH ePzYCu"
  color="#000000"
>
  Glints Aries
</p>
`;

exports[`<Typography> should contain the Title and Paragraph components: <Typography.Title> should render a h1 tag with the text Glints Aries 1`] = `
<h1
  className="aries-typography-title sc-bdVaJa eiimym"
  color="#000000"
>
  Glints Aries
</h1>
`;
